Fix - CSS for alignwide and alignfull

--- a/assets/sass/site/primary/_posts.scss
+++ b/assets/sass/site/primary/_posts.scss
@@ -420,38 +420,51 @@
 =            Gutenberg AlignWide            =
 ====================================*/
 .full-width {
-	#primary .entry-content > .alignfull {
+	#primary {
+
+		.entry-content {
+	
+		> .alignfull {
 		margin-left: calc(50% - 49.5vw);
 		margin-right: calc(50% - 49.5vw);
 		max-width: unset;
 
-		&.wp-block-cover,
-				&.wp-block-cover-image
-				{
-					width: unset;
-				}
+	&.wp-block-cover, 
+	&.wp-block-cover-image, 
+	&.wp-block-cover,
+	&.wp-block-cover-image {
+		width: unset;
 	}
 
-	#primary .entry-content > .alignwide {
+	> .alignwide {
 		margin-left: -60px;
 		margin-right: -60px;
 		max-width: unset;
+		width: unset;
 	}
 
 	&.boxed {
 		#primary {
 
-		#content {
-			overflow: hidden;
-		}
+			.entry-content {
 
-		>.alignwide {
-			margin-left: -60px;
-			margin-right: -60px;
-		}
+					> .alignfull {
+					margin-left: -30px;
+					margin-right: -30px;
+					max-width: unset;
 
+						&.wp-block-cover,
+					&.wp-block-cover-image {
+						width: unset;
+					}
+				}
+
+				> .alignwide {
+					margin: 0;
+				}
+			}
+		}
 	}
 }
-}
-
+		}
 /*=====  End of Gutenberg AlignWide  ======*/
